--- a/event/config/locales/ems.en.yml
+++ b/event/config/locales/ems.en.yml
@@ -13,11 +13,12 @@ en:
     ticket_receipt_price: Price
     ticket_information: Ticket Information
     ticket_contact: Contact Information
-    ticket_outstanding_balance: "You are currently registered for the event shown above.  Your outstanding balance is"
-    ticket_payment_link_leadin: Please make your payment using the following link
+    ticket_registered_following_event: You are currently registered for the following event
+    ticket_outstanding_balance: "According to our accounting, the following amount still needs to be paid"
+    ticket_payment_link_leadin: You can make a payment with the following link
     ticket_payment_link_text: Make Payment
     ticket_payment_reminder_subject: "Payment Reminder: %{value}"
-    ticket_if_you_wish_to_cancel: "If you wish to cancel your participation, please send an email to %{value}."
+    ticket_if_already_paid: "If you have already paid the amount, please send us an email to %{value}."
     registration_receipt_title: Reservation Receipt
     registration_email: Email
     registration_first_name: First Name
