--- a/event/config/locales/ems.ja.yml
+++ b/event/config/locales/ems.ja.yml
@@ -13,11 +13,12 @@ ja:
     ticket_receipt_price: 料金
     ticket_information: チケット情報
     ticket_contact: 連絡先情報
-    ticket_outstanding_balance: "現在あなたは上記のイベントに登録されています。あなたがまだお支払いになっていない金額は"
-    ticket_payment_link_leadin: 下記のリンクを用いてご自分のお支払いを行なって下さい。
-    ticket_payment_link_text: 支払いをする
-    ticket_if_you_wish_to_cancel: "あなたの参加をキャンセルしたい場合は、にメールを送ってください %{value}."
-    ticket_payment_reminder_subject: "お支払い通知: %{value}"
+    ticket_registered_following_event: You are currently registered for the following event
+    ticket_outstanding_balance: "According to our accounting, the following amount still needs to be paid"
+    ticket_payment_link_leadin: You can make a payment with the following link
+    ticket_payment_link_text: Make Payment
+    ticket_payment_reminder_subject: "Payment Reminder: %{value}"
+    ticket_if_already_paid: "If you have already paid the amount, please send us an email to %{value}."
     registration_receipt_title: 予約受理
     registration_email: Eメール
     registration_first_name: 名
