--- a/cms/config/locales/cms.cs.yml
+++ b/cms/config/locales/cms.cs.yml
@@ -18,4 +18,4 @@ cs:
     delete: smazat
     comments_stat: Komentáře
     blog_login_required: Přihlášení je vyžadováno pro přístup k tomuto blogu
-    comment_login_required: Prosím přihlašte se ke svému uživatelskému účtu a zanechat komentář
+    comment_login_required: "Prosím, přihlaste se ke svému účtu, abyste mohl psát komentář. Pokud nemáte uživatelský účet, můžete si jej vytvořit."
