--- a/cms/config/locales/cms.de.yml
+++ b/cms/config/locales/cms.de.yml
@@ -18,4 +18,4 @@ de:
     delete: löschen
     comments_stat: Kommentare
     blog_login_required: 'Um diesen Blog zu sehen, melde Dich bitte an.'
-    comment_login_required: "Bitte loggen Sie sich ein, um Ihre Benutzerkonto, um einen Kommentar zu verfassen"
+    comment_login_required: "Bitte melde dich mit deinen Benutzerdaten an, um einen Kommentar zu veröffentlichen. Falls du noch kein Benutzerkonto hast, kannst du unter nachfolgendem Link eines anlegen."
