--- a/cms/config/locales/cms.en.yml
+++ b/cms/config/locales/cms.en.yml
@@ -18,4 +18,4 @@ en:
     delete: delete
     comments_stat: Comments
     blog_login_required: Login is required to access this blog
-    comment_login_required: Please login to your user account to leave a comment
+    comment_login_required: "Please log in to your account to post a comment. If you do not have a user account, you can create one." 
