--- a/cms/config/locales/cms.ja.yml
+++ b/cms/config/locales/cms.ja.yml
@@ -18,4 +18,4 @@ ja:
     delete: 削除
     comments_stat: コメント
     blog_login_required: このブログにアクセスするにはログインが必要です
-    comment_login_required: コメントを残すにはご自分のユーザーアカウントにログインして下さい
+    comment_login_required: "コメントを投稿するために、アカウントにログインしてください。 ユーザーアカウントをお持ちでない場合は、1を作成することができます。 "
