--- a/cms/config/locales/cms.en.yml
+++ b/cms/config/locales/cms.en.yml
@@ -26,6 +26,7 @@ en:
       name: 'Name'
       reason: 'Reason for writing'
       subject: Subject
+      subject_prefix: Contact Form
       message: Message...
       reason_list:
         reason_1: 'Feedback'
