--- a/cms/config/locales/cms.en.yml
+++ b/cms/config/locales/cms.en.yml
@@ -19,7 +19,9 @@ en:
     comments_stat: Comments
     blog_login_required: Login is required to access this blog
     comment_login_required: "Please log in to your account to post a comment. If you do not have a user account, you can create one." 
-    
+    comment_notify:
+      disclaimer: "You are receiving this email because indicated you wanted to be notified of updates to this blog/forum."
+      
     contact_form:
       sent: "Thank you, your message was emailed to us."
       send_button: Send Message
