--- a/cms/config/locales/cms.fi.yml
+++ b/cms/config/locales/cms.fi.yml
@@ -19,7 +19,9 @@ fi:
     comments_stat: Kommentit
     blog_login_required: Thän blogiin pääsyyn vaaditaan sisään kirjautuminen
     comment_login_required: "Ole hyvä ja kirjaudu sisään tilillesi kommentoidaksesi. Jos sinulla ei ole käyttäjätiliä, voit luoda sellaisen."
-    
+    comment_notify:
+      disclaimer: "Sait tämän sähköpostin, koska ilmoitettu halusitte ilmoitetaan päivityksistä tämän blogin / forum."
+
     contact_form:
       sent: "Kiitos, kun viestisi on lähetetty sähköpostitse meille."
       send_button: Lähetä viesti
