--- a/cms/config/locales/cms.ja.yml
+++ b/cms/config/locales/cms.ja.yml
@@ -19,7 +19,9 @@ ja:
     comments_stat: コメント
     blog_login_required: このブログにアクセスするにはログインが必要です
     comment_login_required: "コメントを投稿するために、アカウントにログインしてください。 ユーザーアカウントをお持ちでない場合は、1を作成することができます。 "
-    
+    comment_notify:
+      disclaimer: "示されたこのブログ/フォーラムの最新情報を通知することがしたかったため、このメールを受け取っている。"
+
     contact_form:
       sent: "あなたのメッセージは、私たちに電子メールで送信された、ありがとうございます。"
       send_button: メッセージを送る
