--- a/forum/config/locales/fms.ja.yml
+++ b/forum/config/locales/fms.ja.yml
@@ -96,3 +96,5 @@ ja:
     no_followed_topics: There are currently no topics being followed
     no_forums: The Forum section will be available soon
     comment_notification_inform: あなたは自動的に将来のコメントの通知を受け取ります
+    follow: フォロー
+    follow_stop: 次のSTOP
