--- a/config/locales/nms.en.yml
+++ b/config/locales/nms.en.yml
@@ -6,6 +6,7 @@ en:
     subscription_successful: "You have successfully subscribed to the newsletter. In order to activate your subscription, we have sent you a confirmation e-mail.  You must click the confirmation link in order to receive the newsletter."
     subscription_updated: Your subscription was successfully updated
     unsubscribe_successful: Your email has been unsubscribed
+    already_subscribed: Already Subscribed
     
     #--- Mailchimp specific errors
     List_DoesNotExist: The specified list does not exist
