--- a/newsletter/config/locales/nms.cs.yml
+++ b/newsletter/config/locales/nms.cs.yml
@@ -6,6 +6,7 @@ cs:
     subscription_successful: "Úspěšně jste se přihlásili k odběru newsletteru. Aby bylo možné aktivovat předplatné, poslali jsme vám potvrzovací e-mail. Musíte kliknout na odkaz pro potvrzení, aby dostávat newsletter."
     subscription_updated: Vaše předplatné byl úspěšně aktualizován
     unsubscribe_successful: Váš e-mail byl odhlášen
+    already_subscribed: Již Přihlášeno k odběru
     
     #--- Mailchimp specific errors
     List_DoesNotExist: Uvedené v seznamu neexistuje
