--- a/newsletter/config/locales/nms.ja.yml
+++ b/newsletter/config/locales/nms.ja.yml
@@ -6,6 +6,7 @@ ja:
     subscription_successful: "あなたの購読申し込みを受理しました。ニュースレターの配信を始めるために、登録されたメールアドレスに認証メールをお送りしました。ニュースレターを受け取るためにはそのメールの中の認証リンクをクリックしなければなりません。"
     subscription_updated: あなたの購読情報は更新されました
     unsubscribe_successful: あなたのeメールアドレスは購読解除されています
+    already_subscribed: すでにサブスクライブ
     
     #--- Mailchimp specific errors
     List_DoesNotExist: このリストは存在しません
