--- a/config/locales/devise.fi.yml
+++ b/config/locales/devise.fi.yml
@@ -1,57 +1,57 @@
 fi:
-  errors:
-    messages:
-      expired: "on vanhentunut, ole hyvä ja pyydä uusi"
-      not_found: "ei löytynyt"
-      already_confirmed: "on jo vahvistettu, yritä kirjautua sisään uudelleen"
-      not_locked: "ei ollut lukittu"
-      not_saved:
-        one: "1 virhe esti resurssin '%{resource}' tallentamisen:"
-        other: "%{count} virhettä esti resurssin '%{resource}' tallentamisen:"
-
   devise:
-    failure:
-      already_authenticated: 'Olet jo kirjautunut sisään.'
-      unauthenticated: 'Sinun tulee kirjautua sisään tai rekisteröityä voidaksesi jatkaa.'
-      unconfirmed: 'Sinun tulee vahvistaa käyttäjätilisi ennen kuin voit jatkaa.'
-      locked: 'Käyttäjätilisi on lukittu.'
-      invalid: 'Virheellinen sähköpostiosoite tai salasana.'
-      invalid_token: 'Virheellinen valtuutusavain.'
-      timeout: 'Istuntosi on vanhentunut, kirjaudu uudelleen sisään jatkaaksesi.'
-      inactive: 'Käyttäjätiliäsi ei ole vielä aktivoitu.'
-      user:
-        not_found_in_database: "Virheellinen sähköpostiosoite tai salasana."
-    sessions:
-      signed_in: 'Sisäänkirjautuminen onnistui.'
-      signed_out: 'Sinut on kirjattu ulos palvelusta onnistuneesti.'
-    passwords:
-      send_instructions: 'Saat hetken kuluttua sähköpostiisi ohjeet, joiden avulla voit vaihtaa salasanasi.'
-      updated: 'Salasanasi on vaihdettu, ja sinut on kirjattu sisään.'
-      updated_not_active: 'Salasanasi on vaihdettu.'
-      send_paranoid_instructions: "Olemme lähettäneet sähköpostiisi ohjeet salasanan vaihtamiseksi, mikäli antamasi sähköpostiosoite löytyy tietokannastamme."
     confirmations:
-      send_instructions: 'Saat hetken kuluttua sähköpostiisi ohjeet, joiden avulla voit vahvistaa käyttäjätilisi.'
-      send_paranoid_instructions: 'Olemme lähettäneet sähköpostiisi ohjeet käyttäjätilisi aktivoimiseksi, mikäli antamasi sähköpostiosoite löytyy tietokannastamme.'
-      confirmed: 'Käyttäjätilisi on nyt vahvistettu, ja sinut on kirjattu sisään.'
-    registrations:
-      signed_up: 'Tervetuloa! Olet rekisteröitynyt onnistuneesti.'
-      signed_up_but_unconfirmed: 'Olemme lähettäneet sähköpostiisi ohjeet, joiden avulla voit vahvistaa käyttäjätilisi. Ole hyvä ja vahvista käyttäjätilisi saamiesi ohjeiden mukaisesti.'
-      signed_up_but_inactive: 'Olet rekisteröitynyt onnistuneesti. Voit aloittaa palvelun käytön, kunhan käyttäjätilisi on aktivoitu.'
-      signed_up_but_locked: 'Olet rekisteröitynyt onnistuneesti. Voit aloittaa palvelun käytön, kunhan käyttäjätilisi lukitus on poistettu.'
-      updated: 'Käyttäjätietosi on päivitetty.'
-      update_needs_confirmation: "Käyttäjätietosi on päivitetty onnistuneesti, mutta uusi sähköpostiosoitteesi pitää vielä vahvistaa. Olemme lähettäneet sähköpostiisi ohjeet, joiden avulla voit vahvistaa uuden osoitteesi."
-      destroyed: 'Käyttäjätilisi on poistettu. Toivottavasti näemme uudelleen pian!'
-    unlocks:
-      send_instructions: 'Saat hetken kuluttua sähköpostiisi ohjeet, joiden avulla voit poistaa lukituksen käyttäjätililtäsi.'
-      unlocked: 'Käyttäjätilisi lukitus on poistettu onnistuneesti. Kirjaudu sisään jatkaaksesi.'
-      send_paranoid_instructions: 'Olemme lähettäneet sähköpostiisi ohjeet käyttäjätilisi lukituksen poistamiseksi, mikäli antamasi sähköpostiosoite löytyy tietokannastamme.'
-    omniauth_callbacks:
-      success: 'Tunnistus %{kind} -tililtä suoritettu onnistuneesti.'
-      failure: 'Tunnistus %{kind} -tililtä epäonnistui. Syy: "%{reason}".'
+      confirmed: 'Tunnuksesi on nyt vahvistettu. Olet kirjautuneena sisälle.'
+      send_instructions: 'Saat hetken kuluttua sähköpostiisi ohjeet tunnuksen vahvistamiseen.'
+      send_paranoid_instructions: 'Jos sähköpostiosoitteesi on tietokannassamme, saat hetken kuluttua sähköpostiisi ohjeet tunnuksen vahvistamiseen.'
+    failure:
+      already_authenticated: 'You are already signed in.'
+      inactive: 'Tunnustasi ei ole vielä aktivoitu.'
+      invalid: 'Väärä sähköpostiosoite tai salasana.'
+      locked: 'Tunnuksesi on lukittu.'
+      last_attempt: "Sinulla on vielä yksi yritys ennen kuin tunnuksesi lukitaan."
+      not_found_in_database: 'Väärä sähköpostiosoite tai salasana.'
+      timeout: 'Istuntosi on vanhentunut, ole hyvä ja kirjaudu sisään jatkaaksesi.'
+      unauthenticated: 'Sinun pitää kirjautua sisään tai rekisteröityä ennen kuin voit jatkaa.'
+      unconfirmed: 'Sinun täytyy vahvistaa tunnuksesi ennen kuin voit jatkaa.'
     mailer:
       confirmation_instructions:
-        subject: 'Käyttäjätilin vahvistus'
+        subject: 'Vahvistusohjeet'
       reset_password_instructions:
-        subject: 'Salasanan vaihto'
+        subject: 'Ohjeet salasanan nollaukseen'
       unlock_instructions:
-        subject: 'Käyttäjätilin lukituksen poisto'
+        subject: 'Ohjeet tunnuksen lukituksen poistoon'
+    omniauth_callbacks:
+      failure: 'Valtuutus käyttäen palvelua %{kind} epäonnistui, koska "%{reason}".'
+      success: 'Onnistuneesti valtuutettu käyttäen palvelua %{kind}.'
+    passwords:
+      no_token: 'Et voi nollata salasanaasi ilman linkkiä jonka sait sähköpostitse. Jos kuitenkin tulit tälle sivulle linkin kautta, varmista että käytät kokonaista linkkiä.'
+      send_instructions: 'Saat hetken kuluttua sähköpostiisi ohjeet salasanan nollaukseen.'
+      send_paranoid_instructions: "Jos sähköpostiosoitteesi on tietokannassamme, saat hetken kuluttua sähköpostiisi ohjeet salasanan nollaukseen."
+      updated: 'Salasanasi on nyt vaihdettu. Olet kirjautuneena sisälle.'
+      updated_not_active: 'Salasanasi on nyt vaihdettu.'
+    registrations:
+      destroyed: 'Näkemiin! Tunnuksesi on nyt poistettu. Toivottavasti näemme sinut vielä uudelleen.'
+      signed_up: 'Tervetuloa! Rekisteröintisi onnistui.'
+      signed_up_but_inactive: 'Rekisteröintisi onnistui. Emme kuitenkaan voineet kirjata sinua sisään koska tunnuksesi on vielä vahvistamaton.'
+      signed_up_but_locked: 'Rekisteröintisi onnistui. Emme kuitenkaan voineet kirjata sinua sisään koska tunnuksesi on lukittu.'
+      signed_up_but_unconfirmed: 'Vahvistusohjeet on lähetetty sähköpostiosoitteeseesi. Avaathan sähköpostissa olevan linkin vahvistaaksesi tunnuksen.'
+      update_needs_confirmation: 'Tunnuksesi on päivitetty, mutta sinun täytyy vahvistaa uusi sähköpostiosoitteesi. Tarkistathan sähköpostisi ja avaat saamasi vahvistuslinkin.'
+      updated: 'Tunnuksesi on päivitetty.'
+    sessions:
+      signed_in: 'Sisäänkirjautuminen onnistui.'
+      signed_out: 'Uloskirjautuminen onnistui.'
+    unlocks:
+      send_instructions: 'Saat hetken kuluttua sähköpostiisi ohjeet tunnuksesi lukituksen poistoon.'
+      send_paranoid_instructions: 'Jos tunnuksesi on olemassa, saat hetken kuluttua sähköpostiisi ohjeet tunnuksesi lukituksen poistoon.'
+    unlocked: 'Tunnuksesi on nyt avattu. Olet kirjautuneena sisälle.'
+  errors:
+    messages:
+      already_confirmed: 'on jo vahvistettu, yritä kirjautua sisään uudelleen'
+      confirmation_period_expired: 'täytyy vahvistaa aikarajan %{period} sisällä, pyydä uutta vahvistuslinkkiä'
+      expired: 'on vanhentunut. Pyydä uusi.'
+      not_found: "ei löytynyt"
+      not_locked: "ei ollut lukittu"
+      not_saved:
+        one: "1 virhe esti %{resource} tallentamisen:"
+        other: "%{count} virhettä esti %{resource} tallentamisen:"
